<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iviPokeball"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/pokeball"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="20sp"
        android:paddingRight="20sp">

        <TextView
            android:id="@+id/tviPregunta_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="15pt"
            android:text="@string/pregunta_id"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tviPregunta_id"
            android:layout_marginLeft="15sp">

            <TextView
                android:id="@+id/tviPregunta_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13pt"
                android:text="@string/pregunta_texto"/>

            <EditText
                android:id="@+id/eteRespuesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tviPregunta_texto"
                android:hint="@string/respuesta"
                android:textColorHint="#000000"
                android:textColor="#000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10sp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ibuSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#2F6DB4"
                    android:src="@drawable/ic_send"/>

                <ImageButton
                    android:id="@+id/ibuNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#2F6DB4"
                    android:src="@drawable/ic_next"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>